# CLAN-NOTIF

./: .env.example  .gitignore  AGENTS.md  COMPLETE_SYSTEM_SUMMARY.md  DAY2_NOTIFICATION_PLAN.md  DEPLOYMENT.md  EXECUTION_SUMMARY.md  METADATA_ENRICHMENT_SYSTEM.md  METADATA_QUICK_REFERENCE.md  QUICK_START.md  VIDEO_PIPELINE_GUIDE.md  api.py  check_content_schema.py  check_schema.py  commands.txt  complete_server_migration.py  constants.py  db_script.py  debug_video_selector.py  delete_qdrant_content.py  explore_db.py  extract_final.py  filestruct.txt  generate_metadata.py  load_videos.py  mask.py  migrate_to_server_mode.py  notification_scheduler.py  notification_sender.py  pipeline.py  pyproject.toml  qdrant_embedded_export.json  recommend.py  remove_source_field.py  requirements.txt  send_day2_notification_final.py  send_notification_comprehensive.py  send_notification_to_user.py  setup_collection.py  store_content_to_qdrant.py  (+11 more)
backup/: data including branch.xlsx.bak
database/: db_config.py
notifications/: __init__.py  branch_mapping_store.py  database_config.py  demo_notifications.py  engine.py  metric_provider.py  models.py  prepare_branch_mapping.py  run_daily_campaign.py  selector.py  service.py  video_selector.py
notificationschema/: __init__.py  resolver.py  schema.py
pipeline/: extract.py  mask.py  metadata.py  pipeline.py
qdrant/: __init__.py  client.py  indicator_sync.py  query.py  store.py
qdrant_storage_backup_20260403_173034/: meta.json
tests/: test_campaign_notifications_api.py  test_campaign_notifications_batch_api.py  test_paddle.py  (+16 more)
(+2 files in other folders)
